version/0.31/_sources/api/solver/_autosummary/settings/interior_2_child.rst.txt
:orphan:

.. _interior_2_child:

interior_child
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.interior_2_child
    :show-inheritance:

.. rubric:: Attributes

=============================   ======================================

Attribute                                                      Summary

=============================   ======================================
:ref:`name <name_2>`                               Name of the object.

:ref:`location <location_2>`                      Input location name.

:ref:`settings <settings_11>`       Domain name to define settings on.

=============================   ======================================

.. rubric:: Methods

======================   ===============================================

Method                                                           Summary

======================   ===============================================
:ref:`split <split_1>`       Input boundary and location names to split.

======================   ===============================================

.. rubric:: Included in:

==============================   ================

Parent                                    Summary

==============================   ================
:ref:`interior_2 <interior_2>`       Thread-type.

==============================   ================

